work from that monday

--- a/bads_assignment.ipynb
+++ b/bads_assignment.ipynb
@@ -2,18 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "# Some configuration of the plots we will create later\n",
+    "%matplotlib inline\n",
+    "plt.rcParams[\"figure.figsize\"] = (12,6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "df = pd.read_csv('data/BADS_WS2021_known.csv')\n",
@@ -28,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 75,
    "outputs": [
     {
      "name": "stdout",
@@ -92,30 +97,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 76,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "order_item_id    50000.500000\n",
-      "item_id            923.781820\n",
-      "brand_id            30.149020\n",
-      "item_price          65.064695\n",
-      "user_id          27169.073960\n",
-      "return               0.458180\n",
-      "dtype: float64 order_item_id    50000.5\n",
-      "item_id            812.0\n",
-      "brand_id            25.0\n",
-      "item_price          49.9\n",
-      "user_id          31189.0\n",
-      "return               0.0\n",
-      "dtype: float64\n"
-     ]
+     "data": {
+      "text/plain": "North Rhine-Westphalia           22825\nLower Saxony                     15149\nBavaria                          13672\nBaden-Wuerttemberg               11981\nHesse                             7586\nSchleswig-Holstein                5531\nRhineland-Palatinate              4784\nBerlin                            4093\nSaxony                            3147\nHamburg                           2535\nBrandenburg                       2231\nMecklenburg-Western Pomerania     1640\nThuringia                         1550\nBremen                            1258\nSaxony-Anhalt                     1122\nSaarland                           896\nName: user_state, dtype: int64"
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(df.mean(), df.median())"
+    "df.user_title.value_counts()\n",
+    "df.item_size.value_counts()\n",
+    "df.item_color.value_counts()\n",
+    "df.user_state.value_counts()"
    ],
    "metadata": {
     "collapsed": false,
@@ -126,7 +123,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100000 entries, 0 to 99999\n",
+      "Data columns (total 14 columns):\n",
+      " #   Column         Non-Null Count   Dtype         \n",
+      "---  ------         --------------   -----         \n",
+      " 0   order_item_id  100000 non-null  int64         \n",
+      " 1   order_date     100000 non-null  datetime64[ns]\n",
+      " 2   delivery_date  90682 non-null   datetime64[ns]\n",
+      " 3   item_id        100000 non-null  int64         \n",
+      " 4   item_size      100000 non-null  category      \n",
+      " 5   item_color     100000 non-null  category      \n",
+      " 6   brand_id       100000 non-null  int64         \n",
+      " 7   item_price     100000 non-null  float64       \n",
+      " 8   user_id        100000 non-null  int64         \n",
+      " 9   user_title     100000 non-null  category      \n",
+      " 10  user_dob       91275 non-null   datetime64[ns]\n",
+      " 11  user_state     100000 non-null  category      \n",
+      " 12  user_reg_date  100000 non-null  datetime64[ns]\n",
+      " 13  return         100000 non-null  bool          \n",
+      "dtypes: bool(1), category(4), datetime64[ns](4), float64(1), int64(4)\n",
+      "memory usage: 7.4 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.user_title = df.user_title.astype('category')\n",
+    "df.user_title = df.user_title.astype('category')\n",
+    "df.user_title = df.user_title.astype('category')\n",
+    "df.user_title = df.user_title.astype('category')\n",
+    "df.item_size = df.item_size.astype('category')\n",
+    "df.item_color = df.item_color.astype('category')\n",
+    "df.user_state = df.user_state.astype('category')\n",
+    "\n",
+    "\n",
+    "df['order_date'] = pd.to_datetime(df['order_date'])\n",
+    "df['delivery_date'] = pd.to_datetime(df['delivery_date'])\n",
+    "df['user_reg_date'] = pd.to_datetime(df['user_reg_date'])\n",
+    "df['user_dob'] = pd.to_datetime(df['user_dob'])\n",
+    "\n",
+    "df['return'] = df['return'].astype('bool')\n",
+    "df.info()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "return           False     True \nuser_title                      \nCompany       0.375000  0.625000\nFamily        0.603865  0.396135\nMr            0.576756  0.423244\nMrs           0.540192  0.459808\nnot reported  0.666667  0.333333",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>return</th>\n      <th>False</th>\n      <th>True</th>\n    </tr>\n    <tr>\n      <th>user_title</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>Company</th>\n      <td>0.375000</td>\n      <td>0.625000</td>\n    </tr>\n    <tr>\n      <th>Family</th>\n      <td>0.603865</td>\n      <td>0.396135</td>\n    </tr>\n    <tr>\n      <th>Mr</th>\n      <td>0.576756</td>\n      <td>0.423244</td>\n    </tr>\n    <tr>\n      <th>Mrs</th>\n      <td>0.540192</td>\n      <td>0.459808</td>\n    </tr>\n    <tr>\n      <th>not reported</th>\n      <td>0.666667</td>\n      <td>0.333333</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(df.user_title, df['return'], normalize='index')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "return        False     True \nitem_size                    \n1          0.550000  0.450000\n10         0.462094  0.537906\n10+        0.508571  0.491429\n100        0.466667  0.533333\n104        0.810345  0.189655\n...             ...       ...\nunsized    0.723148  0.276852\nxl         0.544312  0.455688\nxs         0.600000  0.400000\nxxl        0.570154  0.429846\nxxxl       0.697674  0.302326\n\n[102 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th>return</th>\n      <th>False</th>\n      <th>True</th>\n    </tr>\n    <tr>\n      <th>item_size</th>\n      <th></th>\n      <th></th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1</th>\n      <td>0.550000</td>\n      <td>0.450000</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>0.462094</td>\n      <td>0.537906</td>\n    </tr>\n    <tr>\n      <th>10+</th>\n      <td>0.508571</td>\n      <td>0.491429</td>\n    </tr>\n    <tr>\n      <th>100</th>\n      <td>0.466667</td>\n      <td>0.533333</td>\n    </tr>\n    <tr>\n      <th>104</th>\n      <td>0.810345</td>\n      <td>0.189655</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>unsized</th>\n      <td>0.723148</td>\n      <td>0.276852</td>\n    </tr>\n    <tr>\n      <th>xl</th>\n      <td>0.544312</td>\n      <td>0.455688</td>\n    </tr>\n    <tr>\n      <th>xs</th>\n      <td>0.600000</td>\n      <td>0.400000</td>\n    </tr>\n    <tr>\n      <th>xxl</th>\n      <td>0.570154</td>\n      <td>0.429846</td>\n    </tr>\n    <tr>\n      <th>xxxl</th>\n      <td>0.697674</td>\n      <td>0.302326</td>\n    </tr>\n  </tbody>\n</table>\n<p>102 rows × 2 columns</p>\n</div>"
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.crosstab(df.item_size, df['return'], normalize='index')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
    "outputs": [],
    "source": [],
    "metadata": {
